Fix alignwide margins for gallery.

--- a/assets/styles/utilities/_alignments.scss
+++ b/assets/styles/utilities/_alignments.scss
@@ -28,6 +28,11 @@
 	.alignwide {
 		margin-left: calc(25% - 25vw);
 		margin-right: calc(25% - 25vw);
+
+		&.wp-block-gallery {
+			margin-left: calc(25% - 25vw - #{ $global-spacing-unit-tiny });
+			margin-right: calc(25% - 25vw - #{ $global-spacing-unit-tiny });
+		}
 	}
 
 }
